k3s_cluster/base/private/code/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-code-ollama
spec:
  type: ClusterIP
  selector:
    app: private-code-ollama
  ports:
    - name: web
      protocol: TCP
      port: 4431
      targetPort: 11434
