k3s_cluster/base/private/code/ollama/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-ollama
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ollama.code.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-code-ollama-service
          port: 4431
  # tls: {}
